# pmt

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  env.py  formatting.py  main.py  polymarket.py  pyproject.toml  scan.py  trade.py
.github/workflows/: ci.yml  lint.yml  publish-pmengine.yml  publish-pmproxy.yml  publish-pmtrader.yml
infra/: cognito.yaml
pmengine/: Cargo.toml  Cross.toml  appspec.yml
pmengine/scripts/: install.sh  start.sh  stop.sh  validate.sh
pmengine/src/: client.rs  cognito.rs  config.rs  engine.rs  gamma.rs  lib.rs  main.rs  order.rs  orderbook.rs  position.rs  risk.rs  strategy.rs
pmengine/src/strategies/: dynamic_market_maker.rs  market_maker.rs  mod.rs  order_test.rs  spread_watcher.rs  sure_bets.rs
pmengine/tests/: integration.sh  test_dynamic_market_maker.rs  test_market_maker.rs  test_spread_watcher.rs  test_sure_bets.rs
pmengine/tests/fixtures/: mod.rs
pmmcp/: pyproject.toml
pmmcp/pmmcp/: __init__.py  reflect.py  serialize.py  server.py
pmmcp/pmmcp/tools/: __init__.py  backtest.py  engine.py  scanners.py
pmproxy/: Cargo.toml  Dockerfile  README.md  appspec.yml
pmproxy/scripts/: install.sh  start.sh  stop.sh  validate.sh
pmproxy/src/: auth.rs  config.rs  error.rs  lambda.rs  lib.rs  main.rs  ratelimit.rs
pmstrat/: pyproject.toml  test_market_maker.py
pmstrat/pmstrat/: __init__.py  backtest.py  cli.py  context.py  dsl.py  rewards.py  signal.py  transpile.py
pmstrat/pmstrat/strategies/: __init__.py  dynamic_market_maker.py  market_maker.py  order_test.py  spread_watcher.py  sure_bets.py
pmstrat/tests/: __init__.py  test_backtest.py  test_rewards.py  test_transpile.py
pmtrader/: benchmark_orders.py  env.py  pyproject.toml  redeem.py
pmtrader/polymarket/: __init__.py  clob.py  cognito.py  gamma.py
pmtrader/polymarket/ui/: __init__.py  app.py  broker.py
pmtrader/strategies/: scanner.py
pmtrader/tests/: README.md  __init__.py  test_gamma_consistency.py  test_proxy.py
pmtrader/tests/fixtures/: clob_api_response.json  order_book_sample.json
pmtrader/ui/: __init__.py  app.py  broker.py  trading.py
polymarket/: __init__.py  clob.py  gamma.py  models.py
proxy/: Cargo.toml  README.md
proxy/client/: __init__.py  generate.sh  pmproxy.py  polymarket_pb2.py  polymarket_pb2_grpc.py  pyproject.toml
proxy/client/src/pmproxy/: __init__.py  base.py  chain.py  client.py  clob.py  config.py  gamma.py
proxy/client/tests/: test_client.py
proxy/src/: lib.rs  main.rs
strategies/: README.md  expiring.py
tests/: README.md  test_formatting.py  test_models.py  test_order_book_depth.py
tests/fixtures/: gamma_response.json
