[project]
name = "pmt"
version = "0.1.0"
description = "polymarket trader"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "py-clob-client>=0.34.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = [
    "proxy/client",
]
