[tool.uv]
index-url = "https://pypi.org/simple"

[project]
name = "pmstrat"
version = "0.1.1"
description = "Strategy DSL and backtesting for Polymarket"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=14.0",
]

[project.scripts]
pmstrat = "pmstrat.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pmstrat*"]
