[project]
name = "pmproxy"
version = "0.1.0"
description = "Python HTTP client for pmproxy - Polymarket API proxy"
readme = "README.md"
authors = [
    { name = "Hunter Boyd", email = "hunterjsb@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/hunterjsb/pmt"
Repository = "https://github.com/hunterjsb/pmt/tree/master/proxy/client"
Issues = "https://github.com/hunterjsb/pmt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmproxy"]
